# ChurnGuard-AI

./: .gitignore  DEMO_SLIDES.txt  GETTING_STARTED.md  LICENSE  PRESENTATION.md  PRESENTATION_10MIN.md  PRESENTATION_SCRIPT.md  README.md  SALESFORCE_COMPARISON.md  docker-compose.yml  generate_golden_dataset.py  ingest_to_qdrant.py  pyproject.toml  start-services.sh  stop-services.sh  test-e2e.sh  test_data_driven_analysis.py  test_personalization.py  test_rag_connection.py
cache/: churn_knowledge_graph.pkl
data/: README.md  churn_analyses.csv  churned_customers_cleaned.csv  customer_interactions.csv  rag_metadata.json  success_stories.csv  support_tickets.csv
data/churn_analysis_docs/: ANALYSIS-0001.txt  ANALYSIS-0002.txt  ANALYSIS-0003.txt  ANALYSIS-0004.txt  ANALYSIS-0005.txt  ANALYSIS-0006.txt  ANALYSIS-0007.txt  ANALYSIS-0008.txt  ANALYSIS-0009.txt  ANALYSIS-0010.txt  ANALYSIS-0011.txt  ANALYSIS-0012.txt  ANALYSIS-0013.txt  ANALYSIS-0014.txt  ANALYSIS-0015.txt  ANALYSIS-0016.txt  ANALYSIS-0017.txt  ANALYSIS-0018.txt  ANALYSIS-0019.txt  ANALYSIS-0020.txt  ANALYSIS-0021.txt  ANALYSIS-0022.txt  ANALYSIS-0023.txt  ANALYSIS-0024.txt  ANALYSIS-0025.txt  ANALYSIS-0026.txt  ANALYSIS-0027.txt  ANALYSIS-0028.txt  ANALYSIS-0029.txt  ANALYSIS-0030.txt  ANALYSIS-0031.txt  ANALYSIS-0032.txt  ANALYSIS-0033.txt  (+42 more)
docs/: COMPREHENSIVE_PROJECT_DOCUMENTATION.md  E2E_TESTING.md  QUICK_QA_CHECKLIST.md  RETRIEVAL_QA_TEST_QUESTIONS.md  Time-Tracking-Logs.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
golden-masters/: churn_golden_master.csv
metrics/: ragas_evaluation_results.csv
notebooks/: 01_churn_rag_experiments.ipynb
scripts/: generate_synthetic_rag_data.py  ingest_rag_data.py  ingest_rag_data_server.py  test_rag_retrieval.py
src/: __init__.py
tests/: quick_test.py  test_multi_agent_system.py  test_rag_system.py
(+32 files in other folders)
