[project]
name = "customer-churn-rag"
version = "0.1.0"
description = "AI-powered customer churn prediction and analysis using RAG and LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    
    # LangChain Core & Agents
    "langgraph>=0.2.69",
    "langchain>=0.3.19",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.7",
    "langchain-experimental>=0.3.4",
    
    # LLM Providers
    "openai>=1.61.0",
    "langchain-cohere>=0.3.3",
    
    # Vector Database
    "qdrant-client>=1.13.2",
    "langchain-qdrant>=0.2.0",
    
    # Document Processing
    "pymupdf>=1.26.3",
    "unstructured>=0.14.8",
    
    # Search & Retrieval
    "tavily-python>=0.5.0",
    "rank-bm25>=0.2.2",
    
    # Evaluation & Metrics
    "ragas==0.2.10",
    
    # Data Science & Visualization
    "networkx>=3.0",
    "numpy>=2.2.2",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    
    # NLP & Text Processing
    "nltk==3.8.1",
    
    # Jupyter & Notebook Support
    "jupyterlab>=4.0.6",
    "ipywidgets>=8.1.1",
    
    # Utilities
    "joblib>=1.3.2",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

